# 2048-C

./: CMakeLists.txt  main.c
src/app/: app.c  app.h  terminal.c  terminal.h
src/events/: events.c  events.h
src/game/: game.c  game.h
src/score/: score.c  score.h
